# eos-config-printer

./: AUTHORS  Makefile.am  README.md  autogen.sh  config.py  config.py.in  configure.ac  debug.py  eos-config-printer.py  pkgvalidator.py  utils.py
data/: com.endlessm.Config.Printing.conf  com.endlessm.Config.Printing.policy  com.endlessm.Config.Printing.rules.in  com.endlessm.Config.Printing.service.in  com.endlessm.Config.Printing.xml  eos-config-printer.conf  eos-config-printer.in  eos-config-printer.service.in
debian/: changelog  control  copyright  eos-config-printer.install  eos-config-printer.links  rules
