AC_INIT(eos-config-printer, 1.0.0)
AC_CONFIG_SRCDIR(eos-config-printer.py)
AM_INIT_AUTOMAKE([1.6 foreign])
AM_PATH_PYTHON([3])
AM_MAINTAINER_MODE([enable])

PACKAGE="AC_PACKAGE_NAME"
AC_SUBST(PACKAGE)

LIBDIRNAME=lib
PPDDIRNAME=ppd
TMPDIRNAME=tmp
AC_SUBST(LIBDIRNAME)
AC_SUBST(PPDDIRNAME)
AC_SUBST(TMPDIRNAME)

PKG_PROG_PKG_CONFIG

AC_CONFIG_FILES([
Makefile
data/eos-config-printer
])
AC_OUTPUT
